render time limit #90701

Closed
opened 2021-08-16 09:16:29 +02:00 by Andrei Salamandic · 6 comments

System Information
Operating system: Windows-10-10.0.22000-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 471.68

Blender Version
Broken: version: 3.0.0 Alpha, branch: cycles-x, commit date: 2021-08-13 09:16, hash: 29e48f2df5
Worked: (newest version of Blender that worked as expected)

Short description of error
[how the render time limit is calculating?]

Exact steps for others to reproduce the error
so, i'm using cycles-x branch but i guess this is related to other branches and even maybe to stable. the render time limit is not described correct. what is the value? seconds? minutes? hours?
ok, it's seconds. but in the scene units in section "time" we have options to modify it to minutes, hours, etc. if i change it to minutes then theoretically the render time must be limited in minutes ,BUT it still remains in seconds. so if i set render time limit to 10 and set "minutes" in scene units the rendering will take 10 seconds instead of 10 minutes. i think this is a bug so it needs to be fixed.

**System Information** Operating system: Windows-10-10.0.22000-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 471.68 **Blender Version** Broken: version: 3.0.0 Alpha, branch: cycles-x, commit date: 2021-08-13 09:16, hash: `29e48f2df5` Worked: (newest version of Blender that worked as expected) **Short description of error** [how the render time limit is calculating?] **Exact steps for others to reproduce the error** so, i'm using cycles-x branch but i guess this is related to other branches and even maybe to stable. the render time limit is not described correct. what is the value? seconds? minutes? hours? ok, it's seconds. but in the scene units in section "time" we have options to modify it to minutes, hours, etc. if i change it to minutes then theoretically the render time must be limited in minutes ,BUT it still remains in seconds. so if i set render time limit to 10 and set "minutes" in scene units the rendering will take 10 seconds instead of 10 minutes. i think this is a bug so it needs to be fixed.

Added subscriber: @andreymd87

Added subscriber: @andreymd87
Member

Added subscribers: @Sergey, @lichtwerk

Added subscribers: @Sergey, @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Archived'

Changed status from 'Needs Triage' to: 'Archived'
Member

note: there is already a TODO comment in code

# TODO: Use proper subtype to show units in the UI.

@Sergey:
{P2342}?

Generally speaking, I think we still dont accept reports for feature branches, so will have to close (thx reporting anyways!).
This is one example where a branch might still be rough around the corners, but for the most part, devs are already aware (see the code comment)

note: there is already a TODO comment in code ``` # TODO: Use proper subtype to show units in the UI. ``` @Sergey: {[P2342](https://archive.blender.org/developer/P2342.txt)}? Generally speaking, I think we still dont accept reports for feature branches, so will have to close (thx reporting anyways!). This is one example where a branch might still be rough around the corners, but for the most part, devs are already aware (see the code comment)

@lichtwerk, if your patch works, mind committing it to the cycles-x branch?

@lichtwerk, if your patch works, mind committing it to the cycles-x branch?

This issue was referenced by ec66b3ef9b

This issue was referenced by ec66b3ef9b02f528e7111c1da2ad19aeda9ab659
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#90701
No description provided.